deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: moc-maria
  labels:
    app.kubernetes.io/part-of: moc-maria
